// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactFormModal  should render error message 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); z-index: 100;"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content contact-form-modal"
        role="dialog"
        tabindex="-1"
      >
        <svg>
          close.svg
        </svg>
        <div
          class="contact-form-modal-content"
        >
          <div
            class="contact-form-modal-content-row"
          >
            <div
              class="contact-form-modal-content-icon"
            >
              !
            </div>
            <h3
              class="headline"
            >
              Sending 
              <br />
              email 
              <br />
              failed
            </h3>
          </div>
          <span>
            Oh no, something went wrong.
          </span>
          <span>
            Please try sending message later.
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ContactFormModal  should render success message 1`] = `
<body
  class="ReactModal__Body--open"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); z-index: 100;"
    >
      <div
        aria-modal="true"
        class="ReactModal__Content contact-form-modal"
        role="dialog"
        tabindex="-1"
      >
        <svg>
          close.svg
        </svg>
        <div
          class="contact-form-modal-content"
        >
          <div
            class="contact-form-modal-content-row"
          >
            <div
              class="contact-form-modal-content-icon"
            >
              <svg>
                check.svg
              </svg>
            </div>
            <h3
              class="headline"
            >
              Email 
              <br />
              successfully 
              <br />
              sent
            </h3>
          </div>
          <span>
            Thanks for reaching me out!
          </span>
          <span>
            I will respond as soon as possible.
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;
